# ChangeLog for app-editors/emacs-vcs
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Jan 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-24.0.9999.ebuild:
  Omit trailing slash from crtdir. Remove obsolete sed tweak for FreeBSD;
  the to be replaced string doesn't occur in the file any more.

  20 Jan 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-24.0.9999.ebuild:
  Sync from portage tree.

  19 Jan 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-24.0.9999.ebuild:
  Remove warning about the CVS->BZR move; it's been more than one year ago.

*emacs-vcs-24.0.9999 (12 Jan 2011)

  12 Jan 2011; Ulrich Mueller <ulm@gentoo.org> +emacs-vcs-24.0.9999.ebuild,
  +metadata.xml:
  Update ebuild for EAPI 4. Merge changes from Alt/Prefix overlay.
