@@ -1,3 +1,4 @@
+EBUILD emacs-vcs-23.2.9999.ebuild 10169 RMD160 78b87f3e39a0f8d747fe944b326c7ca5b15f01a4 SHA1 b3bfebbcf6c138f9204bd9484df777f6fe66e4a9 SHA256 0d52edf54ed6819e4577bef3046d521b042acd854f61037a626e109141f4798a
 EBUILD emacs-vcs-24.0.9999.ebuild 10381 RMD160 ebe3b0cf81c52293ee65e22523d2ad6b472a4038 SHA1 6a2287858b33243e83dee5456786afc25995be55 SHA256 204e7502bdff76b253d658b6cad3c1406227d182df17e3bb961ba2f470f8e70c
-MISC ChangeLog 787 RMD160 e1539bf3a82d68f01b60f072f5878ff31b50122c SHA1 1825b513ebda6ec0af11c36ecc3264aee420d08f SHA256 d1ace2dd758623843ec884e238dfb45db72f1a22068ed5219a036025d6f1328b
+MISC ChangeLog 935 RMD160 c726596c8922b48018c445aeae610dea9a255fb0 SHA1 5db70cb065cae00bb7b51bd960df27776ba06675 SHA256 e46c4480cafe517767ff21a9cb820c2cae34933b4722ea610b6a2b752a9eccd9
 MISC metadata.xml 1842 RMD160 57ca3c2d25e695ead4faa6cb01b4d7a03939b511 SHA1 1960513308596b38c3ad7cd248924c903611d39b SHA256 9ebd8972aea68e7b3fd62915725ca35d0678b218d922a467a2c978fe44312ddb
