@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*emacs-vcs-23.2.9999 (29 Jan 2011)
+
+  29 Jan 2011; Ulrich Mueller <ulm@gentoo.org> +emacs-vcs-23.2.9999.ebuild:
+  Live ebuild for emacs-23 branch.
+
   25 Jan 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-24.0.9999.ebuild:
   Omit trailing slash from crtdir. Remove obsolete sed tweak for FreeBSD;
   the to be replaced string doesn't occur in the file any more.
